--- a/index.html
+++ b/index.html
@@ -4,38 +4,15 @@
         <meta charset="utf-8">
         <title>Kieran Utz | Mouse Track</title>
         <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1 minimal-ui">
-        <meta name="author" content="">
-        <meta name="description" content="">
 
         <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="stylesheet" href="css/style.css">
 
-        <!--[if !IE]><!-->
-            <link rel="stylesheet" href="css/style.css">
-
-            <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-            <script type="text/javascript">
-                function downloadJSAtOnload() {
-                    var mainScript = document.createElement("script");
-                    mainScript.src = "js/min/main.min.js";
-                    document.body.appendChild(mainScript);
-                }
-                if (window.addEventListener) window.addEventListener("load", downloadJSAtOnload, false);
-                else if (window.attachEvent) window.attachEvent("onload", downloadJSAtOnload);
-                else window.onload = downloadJSAtOnload;
-            </script>
-        <!--<![endif]-->
-
-        <!--[if lte IE 9]>
-            <style>body{margin:0 auto;min-width:650px;max-width:1000px;background:#f8fafd;}h1,h2,h3,h4,a,p{margin:0;font-family:'Open Sans',sans-serif}a,a:visited,a:active{color:#1a0dab}p{color:#222;font-size:14px}#ie-warning{padding:15px 20px 20px;background:#ebebeb}</style>
-            <div id="ie-warning"><p>Looks like you're running a version of Internet Explorer that prevents this site from looking snazzy. If you wish to experience the snazziness, consider using a web browser such as <a href="https://www.google.ca/chrome/browser/" target="_blank">Google Chrome</a> or <a href="https://www.mozilla.org/firefox/new/" target="_blank">Firefox</a>! There are <a href="http://danielmiessler.com/writing/dumpie/">a few reasons why it's important</a> – Thanks!</p></div>
-        <![endif]-->
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     </head>
     <body>
-
         <main>
-
             <div id="point"></div>
-
             <div id="mt-contain">
                 <svg id="mt-mouse" width="38" height="57">
                     <path id="base" fill-rule="evenodd" clip-rule="evenodd" fill="#F5F7FA" stroke="#AFB0B3" stroke-miterlimit="10" d="M19,56.5L19,56.5C8.8,56.5,0.5,48.2,0.5,38V15.5c0-8.3,6.8-15,15-15h7c8.3,0,15,6.8,15,15V38C37.5,48.2,29.2,56.5,19,56.5z"/>
@@ -60,10 +37,8 @@
                     </g>
                 </svg>
             </div>
-
-		</main>
-
+	</main>
         <footer></footer>
-
+        <script src="js/min/main.min.js"></script>
     </body>
 </html>
